--- a/index.html
+++ b/index.html
@@ -1,20 +1,22 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Simulador de Preços Vivo</title>
-    <meta name="description" content="Sistema de simulação de preços para telecomunicações" />
+    <title>Simulador de Preços Vivo XXX</title>
+    <meta
+      name="description"
+      content="Sistema de simulação de preços para telecomunicações"
+    />
     <meta name="author" content="Vivo" />
 
     <meta property="og:title" content="Simulador de Preços Vivo" />
-    <meta property="og:description" content="Sistema de simulação de preços para telecomunicações" />
+    <meta
+      property="og:description"
+      content="Sistema de simulação de preços para telecomunicações"
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
