--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Simulador de Preços Vivo XXX</title>
+    <title>Simulador de Preços Vivo</title>
     <meta
       name="description"
       content="Sistema de simulação de preços para telecomunicações"
